--- a/CommonViewApp/app/src/main/AndroidManifest.xml
+++ b/CommonViewApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".TestSlidingTabLayoutActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".TestContainerLayoutActivity"/>
     </application>
 
 </manifest>
