--- a/CommonViewApp/app/src/main/AndroidManifest.xml
+++ b/CommonViewApp/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.heaven7.android.common.view.app">
 
-    <application
+    <application xmlns:tools="http://schemas.android.com/tools"
+        tools:replace="android:appComponentFactory"
+        android:appComponentFactory="androidx.app.AppComponentFactory"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
